Java 21 & other fixes